--- a/guide_naturel/static/css/global.css
+++ b/guide_naturel/static/css/global.css
@@ -44,7 +44,7 @@ body{
   padding:0 10px
 }
 
-/* STYLES DE BASE POUR TOUS LES BOUTONS */
+/* Style de base pour tous les boutons */
 .button_base{
     border-radius:10px;
     padding:5px 30px;
@@ -133,6 +133,7 @@ body{
     font-size:2.8em
 }
 
+/* Responsivité */
 @media screen and (max-width:600px){
   .bfc_subtitle{font-size:1em}
   .bfc_title{font-size:2em}
@@ -200,6 +201,7 @@ body{
   transform:scale(110%)
 }
 
+/* Responsivité */
 @media screen and (max-width:768px){
   .footer-container{
     flex-direction:column;
